# Zephyr-Time-and-Clock-Library

./: CMakeLists.txt  README.md
src/: main.c  time_and_clock_utils.c  time_and_clock_utils.h
